--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             Paragraph in html 
         </title>
         <!--connect to css code-->
-        <link rel="stylesheet" type="text/css" href="travel.css"> 
+        <link rel="stylesheet" type="text/css" href="./travel.css"> 
     </head>
     <div style="position: relative">
         <p style="font-family: Verdana, Geneva, Tahoma, sans-serif; color: white; position: sticky; bottom: 625px; width:100%; text-align: left"> 
